Setting memory profile as in unix start script. Also removed the "-server" option, since it causes important variations in performance along the life of the process, which would make tester's life more difficult.
git-svn-id: https://svn.apache.org/repos/asf/jakarta/jmeter/trunk@323758 13f79535-47bb-0310-9956-ffa450edef68

Former-commit-id: b2b742da34a76624037eb98e42faafc3c97e3b43